adjust overflow on [pre]-formatted text inside a [quote], fixes #3326
git-svn-id: svn://develop.studip.de/studip/trunk@25999 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -358,6 +358,7 @@ img.bookable_rooms_action { display: none; }
     border: 1px solid black;
     margin-left: 20px;
     margin-right: 20px;
+    overflow-x: auto;
     padding: 3px;
 }
 
